# krkrz_wamsoft_fork

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  Makefile_old  PreprocessorDefinitions.md  README.md  bug001.txt  cmake-variants.yaml  gitmodules.txt  libEGL_dri2_virtualbox.txt  sources.cmake  ubuntu25_vmware_out.txt  vcpkg.json  xubuntu20_virtualbox_out.txt  xubuntu25_vmware_out.txt
android-project/: .gitignore  local.properties
android-project/app/: build.gradle
android_adt/jni/: Android.mk  Application.mk  adb_logcat_and_debug_crash.txt  bug001_tvpcannotopenstorage.txt  console.bat
common/: tp_stub.cpp  tp_stub.h
common/base/: BinaryStream.cpp  BinaryStream.h  BinaryStreamBuffer.h  CharacterSet.cpp  CharacterSet.h  EventIntf.cpp  EventIntf.h  FileAllocator.cpp  FuncStubs.cpp  ScriptMgnIntf.cpp  StorageCache.cpp  StorageCache.h  StorageIntf.cpp  StorageIntf.h  SysInitIntf.cpp  SysInitIntf.h  SystemIntf.cpp  SystemIntf.h  TextStream.cpp  UserEvent.h  UtilStreams.cpp  UtilStreams.h  XP3Archive.cpp  XP3Archive.h  makestub.pl  makestub.tjs
common/msg/: MsgIntf.cpp  MsgIntf.h  MsgIntfInc.h
common/sound/: AudioDevice.h  AudioStream.cpp  AudioStream.h  MiniAudioEngine.cpp  MiniAudioEngine.h  OpusCodecDecoder.cpp  PhaseVocoderDSP.cpp  PhaseVocoderDSP.h  QueueSoundBufferImpl.cpp  QueueSoundBufferImpl.h  SoundBufferBaseImpl.cpp  SoundDecodeThread.cpp  SoundEventThread.cpp  SoundPlayer.cpp  SoundPlayer.h  SoundSamples.h  VorbisCodecDecoder.cpp  WaveIntf.cpp  WaveIntf.h  WaveLoopManager.cpp  xmmlib.cpp  xmmlib.h
common/tjs2/: tjs.cpp  tjs.h  tjs.tab.cpp  tjsArray.cpp  tjsBinarySerializer.h  tjsCommHead.h  tjsConfig.cpp  tjsConfig.h  tjsDate.cpp  tjsDebug.cpp  tjsDebug.h  tjsDictionary.cpp  tjsError.h  tjsInterCodeExec.cpp  tjsInterCodeGen.cpp  tjsInterCodeGen.h  tjsMath.cpp  tjsNamespace.h  tjsNative.cpp  tjsNative.h  tjsObject.cpp  tjsObject.h  tjsOctPack.cpp  tjsRegExp.h  tjsScriptBlock.cpp  tjsScriptBlock.h  tjsSnprintf.cpp  tjsString.h  tjsTypes.h  tjsUtils.h  tjsVariant.cpp  tjsVariant.h  tjsVariantString.cpp  tjsVariantString.h  tjsdate.tab.cpp  tjspp.tab.cpp
common/utils/: DebugIntf.cpp  DebugIntf.h  Debugger.h  LogIntf.h  MiscUtility.cpp  NativeFile.h  ObjectList.h  StringUtil.h  TVPTimer.h  ThreadIntf.cpp  ThreadIntf.h  TickCount.cpp  TimerIntf.cpp  TimerIntf.h  TimerThread.cpp  VelocityTracker.h
common/visual/: BitmapDrawDevice.cpp  BitmapDrawDevice.h  BitmapInfomation.cpp  BitmapInfomation.h  BitmapIntf.cpp  BitmapLayerTreeOwner.cpp  BitmapLayerTreeOwner.h  CharacterData.cpp  CharacterData.h  ComplexRect.cpp  DrawDevice.cpp  DrawDevice.h  FreeType.cpp  FreeType.h  FreeTypeFace.h  FreeTypeFontRasterizer.cpp  FreeTypeFontRasterizer.h  GraphicsLoadThread.cpp  GraphicsLoaderIntf.cpp  GraphicsLoaderIntf.h  KeyRepeat.cpp  KeyRepeat.h  LayerBitmapImpl.cpp  LayerBitmapImpl.h  LayerBitmapIntf.cpp  LayerBitmapIntf.h  LayerIntf.cpp  LayerIntf.h  LayerTreeOwner.h  LayerTreeOwnerImpl.cpp  LayerTreeOwnerImpl.h  LoadJPEG.cpp  LoadJXR.cpp  LoadPNG.cpp  LoadTLG.cpp  MoviePlayer.h  NullDrawDevice.cpp  NullDrawDevice.h  PrerenderedFont.cpp  RectItf.cpp  (+9 more)
data/: startup.tjs
data/system/: Initialize.tjs
generic/: krkrz.h  tp_stub.cpp  tp_stub.h
generic/app/: andres.cpp  linuxres.cpp  movie.cpp  objres.cpp  winres.cpp
generic/base/: DrawDeviceImpl.cpp  EventImpl.cpp  FileImpl.cpp  FuncStubs.cpp  LocalFileSystem.h  NativeEventQueue.cpp  NativeEventQueue.h  PluginImpl.cpp  PluginImpl.h  ScriptMgnImpl.cpp  StorageImpl.cpp  StorageImpl.h  SysInitImpl.cpp  SysInitImpl.h  SystemImpl.cpp  makestub.pl
generic/environ/: Application.cpp  Application.h  ApplicationSpecialPath.h  FontSystemBase.cpp  JoyPad.cpp  OGLApplication.cpp  OGLApplication.h  VirtualKey.h  WindowForm.cpp  WindowForm.h  WindowFormEvent.h
generic/msg/: MsgImpl.cpp  MsgLoad.cpp  MsgLoad.h
generic/utils/: LogImpl.cpp  ThreadImpl.cpp  TickCountImpl.cpp
generic/visual/: BitmapBitsAlloc.cpp  BitmapBitsAlloc.h  BitmapInfomationImpl.cpp  BitmapInfomationImpl.h  LayerImpl.cpp  VideoOvlImpl.cpp  VideoOvlImpl.h  WindowImpl.cpp  WindowImpl.h
generic/win32/: FileImpl.cpp
resource/: config.cf  messages-chs.json  messages-en.json  messages.json
sdl3/base/: FileImpl.cpp  SDL3KirikiriIOStream.cpp  SDL3KirikiriIOStream.h  SDL3KirikiriStorage.cpp  SDL3KirikiriStorage.h  resource.cpp  storage.cpp
sdl3/environ/: app.cpp  app.h  app_splash.cpp  form.cpp  joystick.cpp  key.cpp  main.cpp  pad.cpp  stdapp.cpp
sdl3/sound/: audio.cpp
sdl3/utils/: LogImpl.cpp  ThreadImpl.cpp  TickCount.cpp
sdl3/visual/: SDLDrawDevice.cpp  SDLDrawDevice.h  SDLTextureUpdateRect.h
win32/: XAudio2AudioStream.cpp  tp_stub.cpp  tp_stub.h
win32/base/: EventImpl.cpp  FileSelector.cpp  FuncStubs.cpp  NativeEventQueue.cpp  PluginImpl.cpp  PluginImpl.h  ScriptMgnImpl.cpp  StorageImpl.cpp  StorageImpl.h  SusieArchive.cpp  SysInitImpl.cpp  SysInitImpl.h  SystemImpl.cpp  SystemImpl.h  makestub.pl
win32/environ/: Application.cpp  Application.h  ApplicationSpecialPath.h  CompatibleNativeFuncs.cpp  ConfigFormUnit.cpp  DetectCPU.cpp  DetectCPU.h  EmergencyExit.cpp  SystemControl.cpp  TVPWindow.cpp  VersionFormUnit.cpp  WindowFormUnit.cpp  WindowFormUnit.h  WindowsUtil.cpp
win32/movie/: BufferRenderer.cpp  BufferRenderer.h  CDemuxOutputPin.cpp  CDemuxSource.cpp  CMakeLists.txt  CMediaSeekingProxy.cpp  CVMRCustomAllocatorPresenter9.cpp  DShowException.cpp  IBufferRenderer.h  MFByteStream.cpp  MFPlayer.cpp  MFPlayer.h  PlayWindow.cpp  TVPVideoOverlay.h  dslayerd.cpp  dsmixer.cpp  dsmovie.cpp  dsmovie.h  dsoverlay.cpp  krlmovie.cpp  krmmovie.cpp  krmovie.cpp  krmovie.rc  license.txt  resource.h  webplayer.cpp  webplayer.h
win32/msg/: MsgImpl.cpp  MsgImpl.h  MsgLoad.cpp  ReadOptionDesc.cpp
win32/sound/: WaveImpl.cpp  WaveImpl.h
win32/utils/: ClipboardImpl.cpp  FilePathUtil.h  ThreadImpl.cpp  TickCountImpl.cpp
win32/vcproj/: SysInitScript.tjs  dpi.manifest  license.txt  option_desc_ja.json  resource.h  string_table_chs.rc  string_table_en.rc  string_table_jp.rc  string_table_resource.h
win32/visual/: BasicDrawDevice.cpp  (+20 more)
(+60 files in other folders)
